test/spec_vectors/global/fail/module_6.wat
(module (global f32 (local.get 0)))